Removed ng2-charts and switched to chart.js

--- a/Invictus/src/app/pages/admin/admin.page.html
+++ b/Invictus/src/app/pages/admin/admin.page.html
@@ -11,4 +11,8 @@
 
 <ion-content>
   <!-- Your admin page content goes here -->
+  <ion-card>
+    <canvas id="myChart"></canvas>
+    </ion-card>
+
 </ion-content>
