Fixed chart.js not working, removed ng2-charts is not compatible for some reason with my app.

--- a/Invictus/src/app/pages/admin/admin.page.html
+++ b/Invictus/src/app/pages/admin/admin.page.html
@@ -12,7 +12,8 @@
 <ion-content>
   <!-- Your admin page content goes here -->
   <ion-card>
-    <canvas id="myChart"></canvas>
-    </ion-card>
-
+  <div>
+    <canvas #chartCanvas></canvas>
+  </div>
+</ion-card>
 </ion-content>
