Created a chart to display the average workout time per all users

--- a/Invictus/src/app/pages/admin/admin.page.html
+++ b/Invictus/src/app/pages/admin/admin.page.html
@@ -16,4 +16,9 @@
     <canvas #chartCanvas></canvas>
   </div>
 </ion-card>
+<ion-card>
+  <div>
+    <canvas #averageChartCanvas></canvas>
+  </div>
+</ion-card>
 </ion-content>
