Added comments to the home page ts

--- a/Invictus/src/app/pages/login/login.page.html
+++ b/Invictus/src/app/pages/login/login.page.html
@@ -7,10 +7,12 @@
     <div class="login-body">
       <form class="login-form" (ngSubmit)="adminLogin()">
         <div class="mb-3">
-          <input type="text" class="form-control" placeholder="Username" [(ngModel)]="adminUsername" name="adminUsername">
+          <input type="text" class="form-control" placeholder="Username" [(ngModel)]="adminUsername"
+            name="adminUsername">
         </div>
         <div class="mb-3">
-          <input type="password" class="form-control" placeholder="Password" [(ngModel)]="adminPassword" name="adminPassword">
+          <input type="password" class="form-control" placeholder="Password" [(ngModel)]="adminPassword"
+            name="adminPassword">
         </div>
         <button type="submit" class="btn admin-btn">Admin</button>
       </form>
